# compilers

./: .gitignore  README.md
ab1/: especificacao-lisc.tex  especificacao-peixoto.tex  resumo.org
ab1/Projeto/: especificacao-lisc.tex
ab1/Projeto/analisador-C/include/: globals.h
ab1/Projeto/analisador-C/scripts/: fibonacci.lc  shell-sort.lc
ab1/Projeto/analisador-C/src/: main.c
ab1/analisador/: lexer.py  main.py  token.py
ab1/analisador-C/include/: scanner.h
ab1/analisador-C/scripts/: fibonacci.lc  shell-sort.lc
ab1/analisador-C/src/: main.c  scanner.c
ab1/analisador-python/: fibonacci.lc  hello-world.lc  lexer.py  main.py
estudo-prova-ab1/: resumo.org  resumo.tex
estudo-prova-ab2/: resumo.org  resumo.tex  resumo.txt
exercises/11-06-2019/: CMakeLists.txt
exercises/11-06-2019/include/: errno.h  globals.h  lexical.h  parser.h
exercises/11-06-2019/src/: lexical.c  main.c
exercises/30-07-2019/: CMakeLists.txt  TAGS  question.org
exercises/30-07-2019/include/: parser.h  scanner.h
exercises/30-07-2019/src/: main.c  parser.c  scanner.c
projeto/ab1/: especificacao-lisc.tex
projeto/ab1/analisador-C/: .projectile  CMakeLists.txt
projeto/ab1/analisador-C/include/: errno.h
projeto/ab1/analisador-C/scripts/: fibonacci.lc
projeto/ab2/: gramatica-lisc.tex
projeto/ab2/compilador/: .ccls  CMakeLists.txt  TAGS
projeto/ab2/compilador/include/: parser.h  scanner.h
projeto/ab2/compilador/scripts/: declaracao.lc  fibo-result.txt  fibonacci.lc  hello-result.txt  hello-world.lc  program.txt  shell-result.txt  shell-sort.lc  teste.lc
(+3 files in other folders)
